--- a/serverless.yml
+++ b/serverless.yml
@@ -1,21 +1,4 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: vika
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
 
 provider:
   name: aws
@@ -23,10 +6,8 @@ provider:
   region: eu-central-1
   environment:
     VIKA_TOKEN: ${env:VIKA_TOKEN}
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+    AWS_ACCESS_KEY_ID: ${env:AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${env:AWS_SECRET_ACCESS_KEY}
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
